--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@reduxjs/toolkit": "^2.10.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "prettier": "^3.6.2",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
