--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
+    "json-server": "^1.0.0-beta.3",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "prettier": "^3.6.2",
