--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-data-grid": "^8.17.0",
     "@reduxjs/toolkit": "^2.10.1",
     "json-server": "^1.0.0-beta.3",
     "next": "16.0.1",
